# Simple_Steps

./: .gitignore  AGENTIC_README.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_checks.sh  start_backend.sh
dev_notes/: formula_bar_contracts.md  notes_march1.md  stage3_formula_grammar_and_shape_vocabulary.md  status_update_feb_16_decorators.md  status_update_feb_25_decorators.md
docs/: context.md  introduction.md  notebook_dataflow.md
docs/adr/: 001-template.md  002-frontend-stack.md  003-backend-stack.md  004-data-handling.md  005-linear-workflow.md  006-agent-chatbot.md
docs/current_status/: 000-summary.md  001-frontend-setup.md  002-data-types.md  003-ui-scaffolding.md  004-workflow-component.md  005-step-detail-view.md  006-integration-logic.md  007-dynamic-columns.md
docs/dev_notes/: integration_strategies.md  stage_1_summary.md  status_update_feb_13.md
docs/dev_plan/: 001-frontend-setup.md  002-data-types.md  004-workflow-component.md  006-integration-logic.md  007-dynamic-columns.md  008-visual-refinements.md  011-testing-strategy.md  100-architecture.md  101-formula-language.md  102-workflow-and-session-shapes.md  103-ui-as-formula-formulator.md  104-equals-sign-convention.md  105-validation-flow.md  109-stage3-implementation-log.md  110-grammar-and-constructors.md  111-shape-transitions.md  112-run-status-and-ui-fixes.md  113-spreadsheet-parity-checklist.md  114-python-extension-model.md  115-execution-and-cross-cutting.md  116-open-questions-and-decisions.md  200-shell-infrastructure-plan.md  README.md  operation_definition.md
docs/dev_plan/old_notes/: 003-ui-scaffolding.md  005-step-detail-view.md  006-integration-logic.md  009-layout-consolidation.md  010-integrated-visuals-and-layout.md
docs/spec/: 000-overview.md  001-ui-components.md  002-data-model.md  003-workflow-logic.md  004-dynamic-columns.md  005-visual-refinements.md  006-layout-and-widget-refinements.md  007-ui-toolbar-and-visibility-refinements.md  008-session-state-management.md
docs/system_design/: 01-architecture-overview.md  02-formula-system.md  03-orchestration-engine.md  04-operation-registration.md  05-pack-system.md  06-frontend-architecture.md  07-data-flow-api-contract.md  08-pipeline-persistence.md  README.md
docs/testplan/: 000-overview.md
docs/tools/: notebook_dataflow_viewer.html
examples/my_project/: README.md  my_operations.py  my_pipeline.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
frontend/src/components/: ActivityBar.css  ActivityBar.tsx  AgentConfigPanel.css  AgentConfigPanel.tsx  AgentWidget.css  AgentWidget.test.tsx  AgentWidget.tsx  ChatSidebar.css  ChatSidebar.tsx  DataOutputGrid.test.tsx  DataOutputGrid.tsx  DetachedStepWindow.css  DetachedStepWindow.tsx  ExecutionLog.css  ExecutionLog.tsx  FileTree.css  FileTree.tsx  FormulaEditor.tsx  GlobalControls.css  GlobalControls.tsx  Icon.tsx  MainLayout.css  MainLayout.test.tsx  MainLayout.tsx  MenuBar.css  MenuBar.tsx  OperationColumn.css  OperationColumn.tsx  PreviousStepDataPicker.tsx  RenameModal.tsx  SaveModal.css  SaveModal.tsx  Sidebar.css  Sidebar.tsx  StagedDataGrid.css  StagedDataGrid.tsx  StepDetailView.css  StepDetailView.test.tsx  StepDetailView.tsx  StepIcon.css  (+16 more)
frontend/src/context/: StepWiringContext.tsx
frontend/src/hooks/: useStagedPreview.ts  useWorkflow.ts
frontend/src/mocks/: initialData.ts
frontend/src/services/: agentApi.ts  api.test.ts  api.ts  commands.ts
frontend/src/shell/: CommandPalette.css  CommandPalette.tsx  monaco.d.ts  monacoSetup.ts
frontend/src/styles/: theme.ts
frontend/src/types/: models.ts
frontend/src/utils/: formulaIntegration.test.ts  (+2 more)
mock_operations/: mock_youtube_analysis.py  mock_youtube_ops.py  mock_youtube_pack_ops.py
mock_projects/mock_basic_variables/: README.md  mock_basic_variables_ops.py  run_pipeline.py
mock_projects/mock_table_manipulations/: mock_table_ops.py  run_pipeline.py
mock_projects/mock_youtube_analysis/: library_example.py  mock_youtube_ops.py  run_pipeline.py
notebook_for_data_viewing/: 03_safe_formula_demo.ipynb  04_safe_formula_workflow_runner.ipynb  README.md
pack_template/: README.md  pyproject.toml
pack_template/src/simple_steps_example_pack/: __init__.py  operations.py
packs/: README.md
projects/: wf-initial.json
projects/sample-youtube-mock-analysis/: new-1772426824988.json  new-pipeline-sample-example1.json  new-pipeline-sample.json  sample-example.json  ui-test-basic-fetch-metadata.json  ui-test-filtered-analysis-report.json  ui-test-full-analysis-report.json
prompts/: 10-spec.md  30-implemend.md
scripts/: backfill_formulas.py  guardrails.py  migrate_workflows.py  run_coverage.sh  verify_phase.ph
src/SIMPLE_STEPS/: README.md  __init__.py  bootstrap_install.py  build_frontend.py  cli.py  cli_dev.py  cli_local.py  cli_pack.py  core_pack_v2_preview.py  decorators.py  engine.py  eval_engine.py  file_manager.py  formula_parser.py  generic_adapter.py  helpers.py  main.py  models.py  notebook_dataflow.py  operation_pack.py  operations.py  orchestration_ops.py  orchestrators.py  pack_loader.py  pack_manager.py  progress.py  safe_formula.py  settings.py  step_proxy.py  workspace_state.py  youtube_adapter.py  youtube_ops.py
src/youtube_operations/: youtube_ops.py
tests/: basic_mock_youtube_operations.py  mock_youtube_operations_without_ss.py  test_basic_variables.py  test_engine.py  test_formula_alignment.py  test_notebook_dataflow.py  test_operation_pack.py  test_orchestrators.py  test_pack_loader.py  test_pack_manager.py  test_safe_formula.py  test_table_manipulations.py  test_tabular_selection.py  test_workspace_state.py
usage_docs/: formula-bar.md  getting-started.md  helpers.md  operations.md  projects-and-saving.md  settings.md  step-variables.md
usage_docs/developers/: adding-operations.md  creating-operation-packs.md  creating_packs.md  creating_pip_packs.md  desktop-mode.md  managing-packs.md
(+58 files in other folders)
