[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-steps"
version = "0.1.0"
description = "Visual pipeline orchestrator for Python functions"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Stuart Synakowski"},
]
keywords = ["pipeline", "workflow", "orchestrator", "data", "no-code", "low-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "importlib-metadata>=4.0; python_version<'3.10'",
    "websockets>=12.0",
]

[project.optional-dependencies]
agent = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]
agent-anthropic = [
    "simple-steps[agent]",
    "langchain-anthropic>=0.2.0",
]
agent-ollama = [
    "simple-steps[agent]",
    "langchain-ollama>=0.2.0",
]
desktop = [
    "pywebview>=5.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/stusynakowski/Simple_Steps"
Repository = "https://github.com/stusynakowski/Simple_Steps"
Issues = "https://github.com/stusynakowski/Simple_Steps/issues"

[project.scripts]
simple-steps = "SIMPLE_STEPS.cli:main"
simple-steps-local = "SIMPLE_STEPS.cli_local:main"
simple-steps-dev = "SIMPLE_STEPS.cli_dev:main"
simple-steps-build = "SIMPLE_STEPS.build_frontend:main"
simple-steps-pack = "SIMPLE_STEPS.cli_pack:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
SIMPLE_STEPS = ["frontend_dist/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
